Fixed position cell on mobile

--- a/app/client/pages/League/LeagueResults/LeagueResultsMantra/LeagueResultsMantraTable/LeagueResultsMantraTable.module.scss
+++ b/app/client/pages/League/LeagueResults/LeagueResultsMantra/LeagueResultsMantraTable/LeagueResultsMantraTable.module.scss
@@ -28,7 +28,7 @@
   }
 
   @media (max-width: 991px) {
-    flex-basis: 24px;
+    flex-basis: 30px;
     margin-left: 12px;
 
     &.isPromotion {
@@ -66,6 +66,7 @@
 
   @media (max-width: 480px) {
     flex-basis: 16px;
+    padding-left: 0;
   }
 
   @media (max-width: 350px) {
